--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,10 @@
 name: strong_router
 description: A strongly typed router.
 version: 1.0.0
+homepage: https://github.com/lowski/strong_router
 
 environment:
-  sdk: ">=2.18.5 <3.0.0"
+  sdk: ">=2.18.5 <4.0.0"
   flutter: ">=1.17.0"
 
 dependencies:
